--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
             <div class="search-container">
                 <input type="text"><button>Search</button>
             </div>
-            <div>
-                <img src="res/images/me.png" alt="Me">
-            </div>
+            <div class="dropdown">
+                <image onclick="clickFunction()" class="dropbtn" src ="res/images/me.png" alt="Me">
+
+                </image>
+                <div id="myDropdown" class="dropdown-content">
+                  <a>Dumb User<br>john.doe@example.com</a>
+                </div>
+              </div>
         </nav>
     </header>
 
